--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <h2>What is your name?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      Cihad Nusret
     </p>
 
     <h2>What is a fun fact about yourself?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      I like electronics
     </p>
 
     <h2>What do you look like?</h2>
-    <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
+    <img src="https://i.pinimg.com/originals/30/c3/47/30c347c6e1a13eb5a3a28f98145440d9.png"/>
 
   </body>
 </html>
